--- a/connectkernel/connectkernel.1
+++ b/connectkernel/connectkernel.1
@@ -4,13 +4,15 @@ connectkernel\- registering an exported USB device with a kernel running usbredi
 .SH SYNOPSIS
 .B connectkernel
 devid server port [\fI--attach <sysfs_file>\fR]
+devid --socket file  [\fI--attach <sysfs_file>\fR]
 .SH DESCRIPTION
 connectkernel is a small standalone utility which will connect to a
 remote usbredirserver and give the connection handle to the linux
 kernel, thereby importing the remote device into the running linux kernel.
 .PP
-You need to specify a unique identifier for the remote device, and a
-server and port where the device can be found.
+You need to specify a unique identifier for the remote device.  You either provide
+a server and port for a TCP connection to the device, or you can provide
+the name of a UNIX domain socket via the --socket option.
 .PP
 Notice that an invocation of connectkernel can only be used to export a
 single USB device. If you want to connect multiple devices you will need
